[package]
name = "reqwest"
version = "0.1.0"
edition = "2021"

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9.9", features = ["luajit", "module"] }
reqwest = { version = "0.12.7", features = ["blocking", "native-tls-alpn"] }
